src/components/About.css
#about-background {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  height: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("../images/nasa-Q1p7bh3SHj8-unsplash.jpg");
  background-position: center;
  background-size: cover;
  background-attachment: fixed;
}

#about {
  color: #ededed;
  margin-left: 250px;
  padding-top: 80px;
  padding-bottom: 45px;
}

.about-section-container {
  padding-left: 3rem;
}

#about h1 {
  font-size: 2.8rem;
  margin: 40px 0;
}

#about h2 {
  font-size: 1.8rem;
  margin: 50px 0 30px;
}

#about p {
  margin: 20px 0;
  font-size: 15px;
}

#about a {
  color: #ededed;
}

.wrapper {
  text-align: center;
}

.our_team {
  width: auto;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.our_team .team_member {
  width: 250px;
  margin: 5px;
  background: #000000;
  padding: 20px 10px;
}

.our_team .team_member .member_img {
  background: #287088;
  max-width: 190px;
  width: 100%;
  height: 190px;
  margin: 0 auto;
  border-radius: 50%;
  padding: 5px;
  position: relative;
  cursor: pointer;
}

.our_team .team_member .member_img img {
  object-fit: cover;
  vertical-align: middle;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.our_team .team_member h3 {
  font-size: 20px;
  font-weight: bold;
  color: #287088;
  margin-top: 12px;
  margin-bottom: 8px;
  border-bottom: 3px solid #287088;
  width: 75%;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 10px;
  line-height: normal;
}

.our_team .team_member span {
  font-size: 16px;
  font-weight: bold;
  line-height: normal;
  color: white;
}

.our_team .team_member p {
  font-size: 16px;
  line-height: normal;
  margin: 15px 0;
  color: white;
}

.our_team .team_member .member_img .social_media {
  position: absolute;
  top: 5px;
  left: 5px;
  background: rgba(0, 0, 0, 0.65);
  width: 95%;
  height: 95%;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  transform: scale(0);
  transition: all 0.5s ease;
}

.our_team .team_member .member_img .social_media .item {
  margin: 0 10px;
}

.our_team .team_member .member_img .social_media .fab {
  color: #8c7ae6;
  font-size: 20px;
}

.our_team .team_member .member_img:hover .social_media {
  transform: scale(1);
}

.team-type {
  display: table-column-group;
}

@media (max-width: 870px) {
  #about {
    margin-left: 0;
    padding-top: 8rem;
  }

  .about-section-container {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }
}

@media (max-width: 767px) {
  #about h1 {
    font-size: 2.2rem;
    margin: 30px 0;
  }
  #about h2 {
    font-size: 1.6rem;
    margin: 40px 0 25px;
  }
  #about p {
    margin: 15px 0;
    font-size: 15px;
  }
}

